dynamic data with html form using servlet

--- a/src/servlet/src/main/webapp/WEB-INF/web.xml
+++ b/src/servlet/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,10 @@
         <servlet-name>FirstGenericServlet</servlet-name>
         <servlet-class>FirstGenericServlet</servlet-class>
     </servlet>
-
+    <servlet>
+        <servlet-name>HandleRequest</servlet-name>
+        <servlet-class>HandleRequest</servlet-class>
+    </servlet>
 
     <servlet-mapping>
         <servlet-name>HelloWorldServlet</servlet-name>
@@ -31,6 +34,16 @@
         <servlet-name>FirstGenericServlet</servlet-name>
         <url-pattern>/generic</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>HandleRequest</servlet-name>
+        <url-pattern>/form</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/main.html</url-pattern>
+    </servlet-mapping>
+
     <session-config>
         <session-timeout>
             30
